# multi-language-microservices-boilerplate

./: .gitignore  LICENSE  README.md
microservices/a-portal/: Cargo.toml  README.md  Rocket.toml
microservices/a-portal/api/: Cargo.toml  build.rs
microservices/a-portal/api/src/: lib.rs  pool.rs
microservices/a-portal/api/src/application/: mod.rs
microservices/a-portal/api/src/application/rest/: auth_svc.rs  health_svc.rs  mod.rs  post_svc.rs
microservices/a-portal/api/src/domain/entities/: post.rs
microservices/a-portal/api/src/infra/: mod.rs
microservices/a-portal/api/src/infra/dto/: auth_dto.rs  mod.rs
microservices/a-portal/api/src/infra/repositories/: mutation.rs  query.rs
microservices/a-portal/api/templates/: base.html.tera  edit.html.tera  index.html.tera
microservices/a-portal/entity/: Cargo.toml
microservices/a-portal/migration/: Cargo.toml
microservices/a-portal/service/: Cargo.toml
microservices/a-portal/shared/src/datasource/: mongo.rs
microservices/a-portal/shared/src/keycloak_api/: mod.rs  openid.rs
microservices/a-portal/shared/src/utils/: status.rs  strtool.rs
microservices/a-portal/src/: main.rs
microservices/c-portal/api/: Cargo.toml  build.rs
microservices/c-portal/api/proto/: eventflow.proto  referral_member.proto
microservices/c-portal/api/src/: lib.rs
microservices/c-portal/api/src/application/: mod.rs
microservices/c-portal/api/src/application/events/: mod.rs
microservices/c-portal/api/src/application/grpc/: eventflow_client.rs  mod.rs
microservices/c-portal/api/src/application/rest/: health_svc.rs  jwt_svc.rs  mod.rs  settings_svc.rs  test_svc.rs  user_svc.rs
microservices/c-portal/api/src/application/restful/: mod.rs
microservices/c-portal/api/src/application/services/: health_svc.rs  jwttest_svc.rs  mod.rs  post_svc.rs  referral_refresh_svc.rs  referral_svc.rs  test_svc.rs  token_refresh_svc.rs  user_refresh_svc.rs
microservices/c-portal/api/src/domain/: mod.rs
microservices/c-portal/api/src/domain/entities/: cache_token.rs  cache_user.rs  enums.rs  mod.rs  post.rs  user.rs  (+1 more)
microservices/c-portal/api/src/infra/: mod.rs
microservices/c-portal/api/templates/: edit.html.tera  index.html.tera
microservices/c-portal/shared/: Cargo.toml
microservices/c-portal/shared/src/: lib.rs
microservices/c-portal/shared/src/consul_api/: mod.rs  model.rs
microservices/c-portal/shared/src/datasource/: dragonfly.rs  influx.rs  influxdb.rs  mod.rs  mongo.rs  nats.rs  neo4j.rs  postgres.rs  rabbitmq.rs  scylla.rs
microservices/c-portal/shared/src/keycloak_api/: admin.rs  keycloak.rs  mod.rs  model.rs  openid.rs  urls.rs
microservices/c-portal/shared/src/utils/: errors.rs  mod.rs  responses.rs  routes.rs  to_object_id.rs
microservices/chat/: .env.exmaple  README.md  pyproject.toml
microservices/chat/api/: __main__.py  conftest.py  logging.py  settings.py
microservices/chat/api/db/: config.py
microservices/chat/api/db/dao/: dummy_dao.py
microservices/chat/api/db/models/: __init__.py
microservices/chat/api/services/: __init__.py
microservices/chat/api/services/rabbit/: lifetime.py
microservices/chat/api/services/redis/: lifetime.py
microservices/chat/api/tests/: test_dummy.py  test_rabbit.py
microservices/chat/api/web/: __init__.py  application.py  lifetime.py
microservices/chat/api/web/api/: __init__.py  router.py
microservices/chat/deploy/: docker-compose.yml
microservices/chatbot/: .editorconfig  .env.exmaple  .gitignore  README.md  pyproject.toml
microservices/chatbot/api/: __main__.py  lifetime.py  settings.py
microservices/chatbot/api/application/: __init__.py
microservices/chatbot/api/application/grpc/: __init__.py  greeter_server.py  health_server.py
microservices/chatbot/api/infra/: __init__.py  consul.py
microservices/chatbot/api/proto/pb2/: __init__.py  health_pb2.py  health_pb2_grpc.py  helloworld_pb2_grpc.py
microservices/chatbot/api/test/: greeter_client.py
microservices/chatbot/deploy/: Dockerfile  docker-compose.dev.yml
microservices/referral/: .env.example  Cargo.toml
microservices/referral/api/: Cargo.toml  build.rs
microservices/referral/api/proto/: post.proto  refer_member.proto  referral_member.proto
microservices/referral/api/src/: lib.rs
microservices/referral/api/src/application/: mod.rs
microservices/referral/api/src/domain/: mod.rs
microservices/referral/api/src/infra/: mod.rs
microservices/referral/api/src/orm/: mod.rs
microservices/referral/api/src/services/: health_service.rs
microservices/referral/infras/: Cargo.toml
microservices/referral/infras/src/config/: mod.rs  rabbitmq.rs
microservices/referral/infras/src/consul_api/: mod.rs  model.rs
microservices/referral/shared/: Cargo.toml
microservices/referral/shared/src/: config.rs  lib.rs
microservices/referral/shared/src/consul_api/: mod.rs  model.rs
microservices/referral/shared/src/datasource/: dragonfly.rs  influxdb.rs  mongo.rs  nats.rs  neo4j.rs  postgres.rs  rabbitmq.rs  scylladb.rs
microservices/referral/shared/src/keycloak_api/: model.rs
microservices/referral/shared/src/utils/: mod.rs  status.rs  status_utils.rs  str_utils.rs
microservices/referral/src/: main.rs
multi-microservices/referral/: .env.example  Cargo.toml  build.rs  rustfmt.toml
multi-microservices/referral/api/: Cargo.toml
multi-microservices/referral/api/proto/: unaryecho.proto
multi-microservices/referral/api/src/: lib.rs
multi-microservices/referral/api/src/services/: health_service.rs
multi-microservices/referral/infras/: Cargo.toml
multi-microservices/referral/infras/src/: lib.rs
multi-microservices/referral/infras/src/consul_api/: mod.rs  model.rs
multi-microservices/referral/proto/: hello_world.proto  helloworld.proto  referral.proto
multi-microservices/referral/src/: main.rs  server.rs
multi-microservices/referral/src/orm/: mod.rs
multi-microservices/referral/src/orm/service/: mutation.rs
multi-microservices/referral/src/service/: echo_service.rs  health_service.rs  hello_service.rs  mod.rs  post_service.rs
multi-microservices/referral/tests/: client.rs
(+696 files in other folders)
