[package]
authors = ["jason <jason@jaasun.com>"]
edition = "2021"
name = "a-portal"
publish = false
version = "0.1.0"

[workspace]
members = [".", "api", "shared"]

[dependencies]
api = { path = "api" }
shared = { path = "shared" }

tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "rt"] }

tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

# The `clap` gives us a much nicer way to define configuration parameters for our application.
clap = "4.4.13"

# Utility Crates
anyhow = "1.0.79"
async-trait = "0.1.77"
dotenv = "0.15.0"
thiserror = "1.0.56"
colored = "2.1.0"
