[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["jason <jason@jaasun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-consul = "1.1.0"
scylla-driver = "3.26.4"
pydantic = "^2"
pydantic-settings = "^2"
redis = {version = "5.0.1", extras = ["hiredis"]}
loguru = "^0.7.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
