[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []
maintainers = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2"
pydantic-settings = "^2"
yarl = "^1.9.2"
ujson = "^5.8.0"
redis = { version = "5.0.1", extras = ["hiredis"] }
aiofiles = "^23.1.0"
httptools = "^0.6.0"
aio-pika = "^9.4.0"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.1.0"
loguru = "^0.7.0"
python-consul = "1.1.0"
openai = "1.10.0"
beanie = "1.25.0"
motor = "^3.3.2"
pdfminer-six = "^20231228"
chromadb = "^0.4.22"
pymilvus = "^2.3.6"
gradio = "^4.16.0"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "7.0.0"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "0.18.0"
black = "24.1.0"
autoflake = "^2.2.1"
pytest-cov = "^4.0.0"
anyio = "^4.2.0"
pytest-env = "^1.1.3"
fakeredis = "^2.5.0"
asynctest = "^0.13.0"
nest-asyncio = "^1.5.9"
httpx = "0.26.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["api", ]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "API_ENVIRONMENT=pytest",
    "API_DB_BASE=api_test",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
