[package]
authors = ["jason <jason@jaasun.com>"]
edition = "2021"
license = "MIT"
name = "referral"
publish = false
version = "0.1.0"

[workspace]
members = [".", "api", "shared"]

[dependencies]
api = { path = "api" }
shared = { path = "shared" }

tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

# The `clap` gives us a much nicer way to define configuration parameters for our application.
clap = "4.4.12"

# Utility Crates
anyhow = "1.0.77"
async-trait = "0.1.75"
dotenv = "0.15.0"
thiserror = "1.0.52"
colored = "2.1.0"