[package]
authors = ["jason <jason@jaasun.com>"]
edition = "2021"
license = "MIT"
name = "referral"
publish = false
version = "0.1.0"

[workspace]
members = [".", "api"]

[dependencies]
api = { path = "api" }

[[bin]]
name = "api"
path = "src/api_server.rs"

#[[bin]]
#name = "api-test"
#path = "tests/client.rs"
