[package]
authors = ["jason <jason@jaasun.com>"]
edition = "2021"
license = "MIT"
name = "referral"
publish = false
version = "0.1.0"

[workspace]
members = [".", "api", "infras"]

[features]
health = ["dep:tonic-health"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
tower = ["dep:hyper", "dep:tower", "dep:http"]
compression = ["tonic/gzip"]
timeout = ["tokio/time", "dep:tower"]
types = ["dep:tonic-types"]

full = [ "health",  "tracing",  "tower", "compression", "timeout",  "types"]
default = ["full"]

[dependencies]
api = { path = "api" }
infras = { path = "infras" }

tokio = { version = "1.35.0", features = ["full", "tracing", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.10", features = ["full"], optional = true }
tokio-stream = { version = "0.1.14", features = ["net"], optional = true }
tokio-rustls = { version = "0.24.1", optional = true }

tonic = { version = "0.10.2", features = ["gzip"] }
tonic-web = { version = "0.10.2", optional = true }
tonic-health = { version = "0.10.2", optional = true }
tonic-reflection = { version = "0.10.2", optional = true }
tonic-types = { version = "0.10.2", optional = true }

tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"], optional = true }

tower = { version = "0.4.13", optional = true }
rand = { version = "0.8.5", optional = true }

serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_derive = { version = "1.0.193", optional = true }
serde_json = { version = "1.0.108", optional = true }

http = { version = "0.2.11", optional = true }
http-body = { version = "0.4.6", optional = true }
hyper = { version = "0.14.27", optional = true }
hyper-rustls = { version = "0.24.2", features = ["http2"], optional = true }

bytes = { version = "1.5.0", optional = true }
chrono = "0.4.31"
uuid = "1.6.1"
dotenvy = "0.15.7"
colored = "2.0.4"

[[bin]]
name = "api"
path = "src/api_server.rs"

[[bin]]
name = "api-test"
path = "tests/client.rs"
