[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = { version = "0.3.5" }
async-trait = { version = "0.1.77" }
service = { path = "../service" }
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30" }
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde_json = { version = "1.0.11" }
entity = { path = "../entity" }
migration = { path = "../migration" }
tokio = "1.35.1"

[dependencies.sea-orm-rocket]
version = "0.5.3"
