[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.35.1", features = ["full", "tracing", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-rustls = { version = "0.24.1" }

tonic = { version = "0.10.2", features = ["gzip"] }
tonic-web = { version = "0.10.2", optional = true }
tonic-health = { version = "0.10.2" }
tonic-reflection = { version = "0.10.2" }
tonic-types = { version = "0.10.2" }

rand = { version = "0.8.5" }
either = { version = "1.9.0" }
async-stream = { version = "0.3.5" }
futures = { version = "0.3.30", default-features = false, features = ["thread-pool"] }
async-trait = "0.1.77"
once_cell = "1.19.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

bytes = { version = "1.5.0" }
chrono = "0.4.31"
uuid = "1.6.1"
dotenvy = "0.15.7"
colored = "2.1.0"

prost = "0.12.3"
prost-derive = "0.12.3"
prost-types = { version = "0.12.3", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = { version = "1.0.193" }
serde_json = { version = "1.0.111" }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
strum = "0.25.0"
strum_macros = "0.25.3"

tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

anyhow = "1.0.78"
futures-util = { version = "0.3.30" }
rocket = { version = "0.5.0", features = ["json", "uuid", "msgpack"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }

reqwest = { version = "0.11.23", features = ["json"] }
futures-lite = { version = "2.1.0" }
jsonwebtoken = "8.3.0"
validator = { version = "0.14.0", features = ["derive"] }
thiserror = "1.0.52"
mime = "0.3.17"
bcrypt = "0.15.0"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
