[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.12.10" # sea-orm version
features = [
    "runtime-tokio-native-tls",
    #"sqlx-postgres",
     "sqlx-mysql",
]

[dev-dependencies]
tokio = "1.35.1"

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
