[package]
name = "api"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[lib]
path = "./src/lib.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10.0"
anyhow = "1.0.77"
dotenvy = "0.15.7"
serde_json = "1.0.108"
tera = "1.19.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

sea-orm = { version = "0.12.10", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "0.12.10", features = [
    # Enable following runtime and db backend features if you want to run migration via CLI
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-mysql"
] }

async-std = { version = "1.12", features = ["attributes", "tokio1"] }
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }
