[package]
name = "api"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[lib]
path = "./src/lib.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.35.1", features = ["full", "tracing", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-rustls = { version = "0.24.1" }

tonic = { version = "0.10.2", features = ["gzip"] }
tonic-web = { version = "0.10.2", optional = true }
tonic-health = { version = "0.10.2" }
tonic-reflection = { version = "0.10.2" }
tonic-types = { version = "0.10.2" }

rand = { version = "0.8.5" }
either = { version = "1.9.0" }
async-stream = { version = "0.3.5" }
futures = { version = "0.3.30", default-features = false, features = ["thread-pool"] }
async-trait = "0.1.75"
once_cell = "1.19.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

bytes = { version = "1.5.0" }
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["serde"] }
dotenvy = "0.15.7"
colored = "2.1.0"

prost = "0.12.3"
prost-derive = "0.12.3"
prost-types = { version = "0.12.3", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = { version = "1.0.193" }
serde_json = { version = "1.0.108" }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
strum = "0.25.0"
strum_macros = "0.25.3"

tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

h2 = { version = "0.3.22", optional = true }
http = { version = "0.2.11" }
http-body = { version = "0.4.6", optional = true }
hyper = { version = "0.14.28" }
hyper-rustls = { version = "0.24.2", features = ["http2"], optional = true }
warp = { version = "0.3.6", default-features = false, optional = true }
listenfd = { version = "1.0.1" }
httparse = "1.8.0"
httpdate = "1.0.3"
rustls-pemfile = { version = "1.0.4", optional = true }
axum = { version = "0.7.3", features = ["macros"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
anyhow = "1.0.78"
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = [
    "fs",
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
tera = "1.19.1"

reqwest = { version = "0.11.23", features = ["json"] }
futures-lite = { version = "2.1.0" }
jsonwebtoken = "8.3.0"
validator = { version = "0.14.0", features = ["derive"] }
thiserror = "1.0.52"
mime = "0.3.17"
bcrypt = "0.15.0"
serde_qs = "0.12.0"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }