[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
tokio-stream = { version = "0.1.14", features = ["net"] }

tonic = { version = "0.10.2", features = ["gzip"] }
tonic-web = { version = "0.10.2", optional = true }
tonic-health = { version = "0.10.2", optional = true }
tonic-reflection = { version = "0.10.2", optional = true }
tonic-types = { version = "0.10.2" }

executor-trait = "^2.1"
urlencoding = "2.1.3"
bytes = { version = "1.5.0", optional = true }
chrono = "0.4.31"
uuid = "1.6.1"
dotenvy = "0.15.7"
colored = "2.1.0"

serde = { version = "1.0.193", features = ["derive"] }
serde_derive = { version = "1.0.193" }
serde_json = { version = "1.0.108" }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
strum = "0.25.0"
strum_macros = "0.25.3"

tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
neo4rs = { version = "0.7.1" }
async-nats = { version = "0.33.0" }
scylla = { version = "0.11.1", features = ["ssl", "cloud", "chrono", "time"] }
influxdb = { version = "0.7.1", features = ["derive"] }
sea-orm = { version = "0.12.10", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "0.12.10", features = [
    # Enable following runtime and db backend features if you want to run migration via CLI
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-mysql"
] }
mongodb = { version = "2.8.0", default-features = false, features = ["tokio-runtime", "bson-uuid-0_8", "bson-chrono-0_4"] }
bson = { version = "2.8.1", features = ["serde_with", "chrono-0_4"] }
lapin = "2.3.1"

reqwest = { version = "0.11.23", features = ["json"] }
lazy_static = "1.4.0"
async-trait = "0.1.75"
futures-lite = "2.1.0"
async-global-executor = "^2.4.1"
futures = "0.3.30"
jsonwebtoken = "7.2.0"

# The `clap` gives us a much nicer way to define configuration parameters for our application.
clap = { version = "4.4.12", features = ["derive"] }
