[package]
name = "api"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[features]
autoreload = ["tokio-stream/net", "dep:listenfd"]
health = ["dep:tonic-health"]
grpc-web = ["dep:tonic-web", "dep:bytes", "dep:http", "dep:hyper", "dep:tracing-subscriber", "dep:tower"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
hyper-warp = ["dep:either", "dep:tower", "dep:hyper", "dep:http", "dep:http-body", "dep:warp"]
hyper-warp-multiplex = ["hyper-warp"]
uds = ["tokio-stream/net", "dep:tower", "dep:hyper"]
tower = ["dep:hyper", "dep:tower", "dep:http"]
json-codec = ["dep:serde", "dep:serde_json", "dep:bytes"]
compression = ["tonic/gzip"]
timeout = ["tokio/time", "dep:tower"]
types = ["dep:tonic-types"]
cancellation = ["dep:tokio-util"]

full = ["autoreload", "health", "grpc-web", "tracing", "hyper-warp", "hyper-warp-multiplex", "uds", "tower", "json-codec", "compression", "timeout", "types", "cancellation"]
default = ["full"]

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.35.1", features = ["full", "tracing", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.10", features = ["full"], optional = true }
tokio-stream = { version = "0.1.14", features = ["net"], optional = true }
tokio-rustls = { version = "0.24.1", optional = true }

tonic = { version = "0.10.2", features = ["gzip"] }
tonic-web = { version = "0.10.2", optional = true }
tonic-health = { version = "0.10.2", optional = true }
tonic-reflection = { version = "0.10.2", optional = true }
tonic-types = { version = "0.10.2", optional = true }

tower = { version = "0.4.13", optional = true }
rand = { version = "0.8.5", optional = true }

either = { version = "1.9.0", optional = true }
async-stream = { version = "0.3.5", optional = true }
futures = { version = "0.3.30", default-features = false, features = ["thread-pool"] }
async-trait = "0.1.75"
once_cell = "1.19.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

bytes = { version = "1.5.0", optional = true }
chrono = "0.4.31"
uuid = "1.6.1"
dotenvy = "0.15.7"
colored = "2.1.0"

prost = "0.12.3"
prost-derive = "0.12.3"
prost-types = { version = "0.12.3", optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_derive = { version = "1.0.193", optional = true }
serde_json = { version = "1.0.108", optional = true }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
strum = "0.25.0"
strum_macros = "0.25.3"

tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"], optional = true }

h2 = { version = "0.3.22", optional = true }
http = { version = "0.2.11", optional = true }
http-body = { version = "0.4.6", optional = true }
hyper = { version = "0.14.28", optional = true }
hyper-rustls = { version = "0.24.2", features = ["http2"], optional = true }
warp = { version = "0.3.6", default-features = false, optional = true }
listenfd = { version = "1.0.1", optional = true }
httparse = "1.8.0"
httpdate = "1.0.3"
rustls-pemfile = { version = "1.0.4", optional = true }
tower-http = { version = "0.4.4", optional = true }

redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
neo4rs = { version = "0.6.2" }
async-nats = { version = "0.33.0" }
scylla = { version = "0.9.1", features = ["ssl", "cloud"] }
sea-orm = { version = "0.12.10", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "0.12.10", features = [
    # Enable following runtime and db backend features if you want to run migration via CLI
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-mysql"
] }

reqwest = { version = "0.11.23", features = ["json"] }
lapin = "2.3.1"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
