[package]
name = "infras"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.35.0", features = ["full"]}
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"

executor-trait = "^2.1"
urlencoding = "2.1.3"
bytes = { version = "1.5.0", optional = true }
chrono = "0.4.31"
uuid = "1.6.1"
dotenvy = "0.15.7"
colored = "2.0.4"

serde = { version = "1.0.193", features = ["derive"] }
serde_derive = { version = "1.0.193" }
serde_json = { version = "1.0.108" }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
strum = "0.25.0"
strum_macros = "0.25.3"

tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
neo4rs = { version = "0.6.2" }
async-nats = { version = "0.33.0" }
scylla = { version = "0.9.0", features = ["ssl", "cloud"] }
sea-orm = { version = "0.12.9", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "0.12.6", features = [
    # Enable following runtime and db backend features if you want to run migration via CLI
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-mysql"
] }

reqwest = { version = "0.11.22", features = ["json"] }
lazy_static = "1.4.0"
async-trait = "0.1.74"
lapin = "2.3.1"
futures-lite = "2.1.0"
async-global-executor = "^2.4.0"
