[package]
name = "infras"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.35.0", features = ["full"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = { version = "1.0.193" }
serde_json = { version = "1.0.108" }
reqwest = { version = "0.11.22", features = ["json"] }
urlencoding = "2.1.3"